--- a/style.css
+++ b/style.css
@@ -106,16 +106,12 @@ body {
   z-index: 5;
 }
 
-.letter textarea {
-  width: 100%;
-  height: 100%;
-  background: transparent;
-  border: none;
-  color: white;
-  font-size: 22px;
-  outline: none;
-  resize: none;
+.letter h1 {
+    margin-top: 100px;;
+  font-size: 28px;
+  line-height: 1.5;
 }
+
 
 /* Aliens */
 .alien {
