--- a/style.css
+++ b/style.css
@@ -71,8 +71,13 @@ body {
 }
 
 .letter h1 {
-    margin-top: 100px;;
-  font-size: 28px;
-  line-height: 1.5;
+  margin-top: 41px;
+  font-size: clamp(16px, 3.5vw, 22px);
+  line-height: 1.6;
+}
+.letter h2 {
+  margin-top: 30px;
+  font-size: clamp(16px, 3.5vw, 22px);
+  line-height: 1.6;
 }
 
